<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            app:srcCompat="@drawable/logo_hor" />

        <EditText
            android:id="@+id/cedula_login_inpt"
            style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:ems="10"
            android:hint="@string/prompt_cedula"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_login_inpt"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_register_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:backgroundTint="#DBC7FF"
            android:padding="10dp"
            android:text="@string/Login_register"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            app:rippleColor="#AA9BC6" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>