<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".Busqueda_clases">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sucursal_btn"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/filter_sucursal"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sucursal_filter"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/default_nofilter"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tipo_clase_btn"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/filter_tipo"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tipo_clase_filter"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/default_nofilter"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/periodo_inicio_btn"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/filter_inicio"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/periodo_inicio_filter"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/default_nofilter"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hora_inicio_btn"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/filter_hora_inicio"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hora_inicio_filter"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/default_nofilter"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/periodo_final_btn"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/filter_final"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/periodo_final_filter"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/default_nofilter"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hora_final_btn"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/filter_hora_final"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hora_final_filter"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/default_nofilter"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/Buscar_btn"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_weight="1"
            android:backgroundTint="#DBC7FF"
            android:padding="10dp"
            android:text="@string/busqueda_btntxt"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            app:rippleColor="#AA9BC6" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>