<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserinfoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/personita"
                    android:layout_width="150sp"
                    android:layout_height="90sp"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:gravity="top"
                    app:srcCompat="@drawable/person_lightmode" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="1sp"
                    android:scrollIndicators="top">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nombre completo"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="?attr/editTextColor"

                        />

                    <TextView
                        android:id="@+id/nombre_completo_textview"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="?attr/editTextColor"
                        android:text="@string/prompt_cedula"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/cedula_textview"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_age"
                        android:textSize="18sp"
                        android:textColor="?attr/editTextColor"
                        android:gravity="center"
                        />


                    <TextView
                        android:id="@+id/edad_textview"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/prompt_birthdate"
                        android:textColor="?attr/editTextColor"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/fecha_nacimiento_textview"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="Dirección"
                        android:textAlignment="center"
                        android:textColor="?attr/editTextColor"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/user_provincia_textView"
                            android:layout_width="match_parent"
                            android:layout_height="65sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/prompt_province"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/user_canton_textView"
                            android:layout_width="match_parent"
                            android:layout_height="65sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/prompt_canton"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/user_distrito_textView"
                            android:layout_width="match_parent"
                            android:layout_height="65sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:inputType="textPersonName"
                            android:text="@string/prompt_district"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/prompt_email"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="?attr/editTextColor"/>

                    <TextView
                        android:id="@+id/email_textView"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pesaimg"
                    android:layout_width="150sp"
                    android:layout_height="90sp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/baseline_fitness_center_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="@string/prompt_weight"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="?attr/editTextColor"/>

                    <TextView
                        android:id="@+id/peso_textView"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="@string/prompt_IMC"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="?attr/editTextColor"/>

                    <TextView
                        android:id="@+id/imc_textView"
                        android:layout_width="match_parent"
                        android:layout_height="65sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/logout_btn"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="65sp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:backgroundTint="#DBC7FF"
                    android:onClick="addNewCliente"
                    android:padding="10dp"
                    android:text="@string/logout_text"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:rippleColor="#AA9BC6" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>