<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="784dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            app:srcCompat="@drawable/logo_full" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="65sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/personal_info_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="60sp"
                android:layout_height="65sp"
                android:layout_weight="1"
                app:icon="@drawable/person_lightmode"
                app:iconPadding="0dp"
                app:iconTint="?attr/editTextColor" />

            <TextView
                android:id="@+id/user_name_show_text"
                android:layout_width="wrap_content"
                android:layout_height="65sp"
                android:layout_weight="1"
                android:text="@string/username_placeholder"
                android:textAlignment="center"
                android:textSize="35sp" />

            <Space
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buscar_clases_btn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:text="@string/buscar_clases"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ver_clases_btn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:text="@string/mis_clases"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>